# python

./: .gitignore  2048.py  block.py  fleurhome.py  functions.py  os.environ.get.tutorial.py  setup.cfg  setup.py
fleur home huiswerk assistent/: fleur home huiswerk assistent.py  fleur_home_huiswerk_assistent.db  todo.txt
fleurhome/: fleurhome.py  setup.bat  setup.cfg
src/fleurhome/: fleurhome.py  readme.md  setup.cfg
