[metadata]
name=fleurhome
version=0.0.1
author = me
author_email = me@example.com
description = Just a normal package...
long_description= file: readme.md
long_description_content_type= text/markdown
url = 'https://github.com/thelolcoder2007/python'
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir =
  = fleurhome
packages = find:
python_requires = 3

[options.packages.find]
where = fleurhome
